# CppSmoothing

./: .gitignore  CMakeLists.txt  execute_processor.sh  main.cpp  plot_data.py  processor.cpp  processor.hpp
include/: processor.h  smoother.hpp
src/: main.cpp  processor.cpp  smoother.cpp
tests/: test_processor.cpp
